--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta property="og:description" content="فريق 'عين بلها' هو أحد الفرق النشطة ضمن اتحاد أهل محمذن، ويضم مجموعة من الشباب المتطوعين المؤمنين بأهمية العمل الجماعي والخدمة المجتمعية. يسعى الفريق إلى تعزيز روح التعاون والمبادرة، من خلال تنفيذ مشاريع خيرية وتنموية تُجسد قيم الاتحاد وتخدم الأهداف النبيلة لأفراده.
 
     يعمل الفريق بانسجام مع بقية مكونات الاتحاد، ويشارك في حملات الدعم والتبرع، ومبادرات التنمية المجتمعية، بما يعكس التزامه الصادق بالمساهمة الإيجابية والبنّاءة في محيطه.">
-    <meta property="og:image" content="https://ammah24.github.io/..">
+    <meta property="og:image" content="https://ammah24.github.io/wslk.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://ammah24.github.io/..">
+    <meta name="twitter:image" content="https://ammah24.github.io/wslk.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>فريق عين بلها</title>
     <style>
